RoleのテストでPython3.7、3.8を追加した refs #1216

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -14,7 +14,7 @@
       register: OS_VERSION
       changed_when: False
 
-    - name: Show ASCIIQuarium installed
+    - name: Show cowsay is installed
       debug:
         var: COWSAY_INSTALLED
 
