RoleのテストでCircleCIでの処理を追加した refs #1242

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -9,6 +9,7 @@ jobs:
       matrix:
         distro:
           - centos7
+          - centos8
         python-version:
           - 3.6
           - 3.7
