--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: python3 -m pip install -r molecule/requirements.txt
 
-      - name: Test with molecule
+      - name: Test with Molecule
         env:
           ANSIBLE_FORCE_COLOR: '1'
           MOLECULE_DISTRO: ${{ matrix.distro }}
@@ -51,6 +51,14 @@ jobs:
           TZ: 'Asia/Tokyo'
         run: |
           molecule test
+
+      - name: Show Ansible version
+        run: |
+          pip list | grep ansible \
+          | GREP_COLORS='mt=01;34' egrep --color=always '[[:digit:]]' \
+          | GREP_COLORS='mt=01;34' egrep --color=always '\.' \
+          | GREP_COLORS='mt=01;33' egrep --color=always 'ansible.* '
+          ansible --version
 
   trailing-whitespace:
     name: Find Trailing Whitespace
