GitHub ActionsのMoleculeの処理でMoleculeのバージョンを表示する処理を追加した refs #2058

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,12 @@ jobs:
           | GREP_COLORS='mt=01;33' egrep --color=always 'ansible.* '
           ansible --version
 
+      - name: Show Molecule version
+        run: |
+          molecule --version
+        env:
+          PY_COLORS: '1'
+
   trailing-whitespace:
     name: Find Trailing Whitespace
     runs-on: ubuntu-latest
