--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Ansible lint
-        uses: ansible/ansible-lint-action@master
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          targets: |
-            tasks/main.yml
-            molecule/default/converge.yml
-            molecule/default/verify.yml
-          args: "-x 106"
+          python-version: '3.9'
+
+      - name: Install ansible-lint
+        run: |
+          pip install "ansible-lint[community,yamllint]"
+
+      - name: Install galaxy roles
+        run: |
+          ansible-galaxy install git+https://github.com/${{ github.repository }},${{ github.sha }}
+
+      - name: Execulte ansible-lint
+        run: |
+          ansible-lint
+
+      - name: Show ansible-lint version
+        run: |
+          pip list | grep ansible \
+          | GREP_COLORS='mt=01;34' egrep --color=always '[[:digit:]]' \
+          | GREP_COLORS='mt=01;34' egrep --color=always '\.' \
+          | GREP_COLORS='mt=01;33' egrep --color=always 'ansible.* '
+          ansible-lint --version
 
   molecule:
     runs-on: ubuntu-latest
