--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,19 +5,19 @@
   tasks:
     - name: Check whether cowsay is installed
       ansible.builtin.command: cowsay hello
-      register: COWSAY_INSTALLED
+      register: cowsay_installed
       changed_when: False
       ignore_errors: True
 
     - name: Check OS version
       ansible.builtin.command: cat /etc/redhat-release
-      register: OS_VERSION
+      register: os_version
       changed_when: False
 
     - name: Show cowsay is installed
       ansible.builtin.debug:
-        var: COWSAY_INSTALLED
+        var: cowsay_installed
 
     - name: Show OS version
       ansible.builtin.debug:
-        var: OS_VERSION
+        var: os_version
