--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ workflows:
               checkout-path:
                 - 'cowsay'
               molecule-executor-image:
-                - 'ghcr.io/docker-images-mamono210/circleci-executors_molecule/molecule:docker'
+                - 'ghcr.io/docker-images-mamono210/circleci-executors/molecule-docker:latest'
               molecule-test-image:
                 - 'ghcr.io/docker-images-mamono210/ansible-test/centos-stream8:latest'
                 - 'ghcr.io/docker-images-mamono210/ansible-test/centos-stream9:latest'
