Molecule テスト失敗の修正: 「molecule.yml」 に role のパスの記述を追加した refs #4690

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,12 +6,13 @@ driver:
 platforms:
   - name: instance
     image: ${MOLECULE_IMAGE}
-    pre_build_image: True
+    pre_build_image: true
 provisioner:
   name: ansible
   config_options:
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
+      roles_path: "$HOME/.ansible/roles/:/tmp"
 verifier:
   name: ansible
 scenario:
